--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>伏拉夫</title>
 </head>
 <body>
+    <div style="display:none">
 <script>
 alert("我爱ZG!");
 var _hmt = _hmt || [];
@@ -23,6 +24,7 @@ var _hmt = _hmt || [];
 
 document.write(unescape("%3Cspan id='cnzz_stat_icon_1278859110'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1278859110' type='text/javascript'%3E%3C/script%3E"));
 </script>
+</div>
 <script>var OriginTitile = document.title;var leave = "(●—●)喔哟，崩溃啦！- ";var back = "(/≧▽≦/)咦！又好了！- ";var titleTime;document.addEventListener('visibilitychange', function() {if(document.hidden){var changeIcon = function () {var link = document.head.querySelector("link");link.href = "../icon/failure.ico";};changeIcon();document.title = leave + OriginTitile;clearTimeout(titleTime);}else{var changeIcon = function () {var link = document.head.querySelector("link");link.href = "../icon/favicon.ico";};changeIcon();document.title = back + OriginTitile;titleTime = setTimeout(function() {document.title = OriginTitile;}, 2000);}});</script>
 </body>
 
