--- a/menu.html
+++ b/menu.html
@@ -1,9 +1,9 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
-<link rel="shortcut icon" href="https://gitee.com/bili92369113/chviawxjlwjpbgliawxpotiznjkxmtmt5lyp5ouj5asr/favicon.ico" />
+<link rel="shortcut icon" href="/chviawxjlwjpbgliawxpotiznjkxmtmt5lyp5ouj5asr/favicon.ico" />
 <title>伏拉夫</title>
 <style type="texthttps://gitee.com/bili92369113/css">
 body,td,th {
